fixed note create overflow and added some bootstrap relays

--- a/src/app.css
+++ b/src/app.css
@@ -156,6 +156,7 @@ body,
   border: 1px solid rgb(72, 72, 72);
   border-radius: 7px;
   padding: 10px;
+  overflow-wrap: anywhere;
 }
 .link-preview-container {
   border-radius: 10px;
